--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-flake8==3.5.*
-mock==2.0.*
-pypandoc==1.4.*
-pytest==3.3.*
-requests==2.22.*
-responses==0.8.*
-tox==2.9.*
+flake8==3.8.*
+flake8-isort==3.0.1
+isort==4.3.21
+pytest==5.4.*
+pytest-cov==2.10.*
+requests==2.24.*
+responses==0.10.*
+tox==3.18.*
+tox-pyenv==1.1.*
