--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,9 @@
 [tox]
-envlist = py27,py34,py35,py36
+envlist = py35,py36,py37,py38
 
 [testenv]
-deps = -rrequirements.txt
-commands =
-  flake8 .
+deps =
   pytest
+  pytest-cov
+  responses
+commands = pytest
